# resource-aggregator

./: .gitignore  Cargo.toml  README.md  build.sh  docker-compose.yml  sqlx-data.json
migrations/: 20210613094619_create.sql  20210620201414_reserved_columns.sql  20210702101313_drop_status.sql
public/: README.md  angular.json  index.html  package-lock.json  package.json
public/src/: index.html  proxy-conf.json  styles.css
public/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  mock-resources.ts  resource.service.ts  resource.ts
public/src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
public/src/app/messages/: messages.component.css  messages.component.html
public/src/app/resource-detail/: resource-detail.component.css  resource-detail.component.html  resource-detail.component.ts
public/src/app/resource-reserve/: resource-reserve.component.css  resource-reserve.component.html  resource-reserve.component.spec.ts  resource-reserve.component.ts
public/src/app/resources/: resources.component.css  resources.component.html  resources.component.ts
resource-info-scripts/: clear-reserved.sh  example.sh
src/: db.rs  main.rs
