[package]
name = "aggregator"
version = "0.1.0"
authors = ["Jan Tache <j.andreitabs@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "510c176" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "json", "offline" ] }
anyhow = "1"
log = "0.4"
env_logger = "0.8"
