[package]
name = "aggregator"
version = "0.1.0"
authors = ["Jan Tache <j.andreitabs@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "json", "offline" ] }
anyhow = "1"
prae = { version = "0.5.1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.1.2"
tracing = "0.1"
tracing-subscriber = "0.2"
hyper = { version = "0.14", features = ["full"] }

[features]
dev_cors = []
